# Coding_Kata_06-22

./: README.md
c/: README.html  README.md  tasks.json
clojure/: README.md  project.clj
clojure/src/mpkata/: core.clj
clojure/test/mpkata/: core_test.clj
cpp/: CMakeLists.txt  README.md
cpp/src/: FizzBuzz.cpp  FizzBuzz.hpp
cpp/test/: FizzBuzz.cpp
dotnet/: .editorconfig  .gitignore  DotNetKata.sln  README.md
dotnet/.devcontainer/: devcontainer.json
dotnet/Application/: Application.csproj  Program.cs
dotnet/CSharpKata/: CSharpKata.csproj  Example.cs  ExampleTests.cs  Kata.cs  KataTests.cs
dotnet/FSharpKata/: FSharpKata.fsproj  FizzBuzz.fs  FizzBuzzTests.fs
java/: README.md  pom.xml
java/src/main/java/de/methodpark/kata/: App.java
java/src/test/java/de/methodpark/kata/: AppTest.java
javascript/: README.md  jsconfig.json  package-lock.json  package.json
javascript/src/: product.js  product.test.js
pytest/: .flake8  README.md  kata.py  kata_test.py
python/: README.md  pyling.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: product.test.ts  product.ts
